tests/machine/x/c/order_by_map.c
// Generated by Mochi compiler v0.10.26 on 2006-01-02T15:04:05Z
#include <stdio.h>
#include <stdlib.h>

typedef struct {
  int a;
  int b;
} data_t;
typedef struct {
  int len;
  data_t *data;
} data_list_t;
data_list_t create_data_list(int len) {
  data_list_t l;
  l.len = len;
  l.data = calloc(len, sizeof(data_t));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}

typedef struct {
  int a;
  int b;
} tmp_item_t;
typedef struct {
  int len;
  tmp_item_t *data;
} tmp_item_list_t;
tmp_item_list_t create_tmp_item_list(int len) {
  tmp_item_list_t l;
  l.len = len;
  l.data = calloc(len, sizeof(tmp_item_t));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}

int _mochi_main() {
  data_t data[] = {(data_t){.a = 1, .b = 2}, (data_t){.a = 1, .b = 1},
                   (data_t){.a = 0, .b = 5}};
  int data_len = sizeof(data) / sizeof(data[0]);
  data_list_t tmp1 = data_list_t_create(data_len);
  map_string_int *tmp4 =
      (map_string_int *)malloc(sizeof(map_string_int) * data_len);
  int tmp2 = 0;
  for (int tmp3 = 0; tmp3 < data_len; tmp3++) {
    data_t x = data[tmp3];
    tmp1.data[tmp2] = x;
    tmp4[tmp2] = (tmp_item_t){.a = x.a, .b = x.b};
    tmp2++;
  }
  tmp1.len = tmp2;
  for (int i7 = 0; i7 < tmp2 - 1; i7++) {
    for (int i8 = i7 + 1; i8 < tmp2; i8++) {
      if (cmp_map_string_int(tmp4[i7], tmp4[i8]) > 0) {
        map_string_int tmp5 = tmp4[i7];
        tmp4[i7] = tmp4[i8];
        tmp4[i8] = tmp5;
        data_t tmp6 = tmp1.data[i7];
        tmp1.data[i7] = tmp1.data[i8];
        tmp1.data[i8] = tmp6;
      }
    }
  }
  data_list_t sorted = tmp1;
  for (int i9 = 0; i9 < sorted.len; i9++) {
    data_t it = sorted.data[i9];
    if (i9 > 0)
      printf(" ");
    printf("map[");
    printf("a:");
    printf("%d", it.a);
    printf(" ");
    printf("b:");
    printf("%d", it.b);
    printf("]");
  }
  printf("\n");
  free(sorted.data);
  return 0;
}
int main() { return _mochi_main(); }
